[package]
name = "merkava"
version = "0.1.0"
authors = ["Adam Hopkins <admhpkns@gmail.com>"]
edition = "2018"

[dependencies]
tokio = "0.1"
uuid = { version = "0.7", features = ["v5"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
